STAT page added to SYS

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -36,6 +36,84 @@
         <g id="Pages" transform="translate(0, 210)">
             <g id="STAT_Page">
 
+                <g id="boxes">
+                    <path class="box" id="box-hydraulic"
+                          d="M 70,62.5 C 58.114946,62.5 48.5,72.114946 48.5,84 V 284 C 48.5,295.88505 58.114946,305.5 70,305.5 H 1130 C 1141.8851,305.5 1151.5,295.88505 1151.5,284 V 84 C 1151.5,72.114946 1141.8851,62.5 1130,62.5 H 715 V 65.5 H 1130 C 1140.2749,65.5 1148.5,73.725054 1148.5,84 V 284 C 1148.5,294.27495 1140.2749,302.5 1130,302.5 H 70 C 59.725054,302.5 51.5,294.27495 51.5,284 V 84 C 51.5,73.725054 59.725054,65.5 70,65.5 H 480 V 62.5 Z"/>
+                    <path class="box" id="box-apu"
+                          d="M 70,332.5 C 58.114946,332.5 48.5,342.11495 48.5,354 V 504 C 48.5,515.88505 58.114946,525.5 70,525.5 H 1130 C 1141.8851,525.5 1151.5,515.88505 1151.5,504 V 354 C 1151.5,342.11495 1141.8851,332.5 1130,332.5 H 647.05078 V 335.5 H 1130 C 1140.2749,335.5 1148.5,343.72505 1148.5,354 V 504 C 1148.5,514.27495 1140.2749,522.5 1130,522.5 H 70 C 59.725054,522.5 51.5,514.27495 51.5,504 V 354 C 51.5,343.72505 59.725054,335.5 70,335.5 H 555 V 332.5 Z"/>
+                    <path class="box" id="box-status-messages"
+                          d="M 70,722.5 C 58.114946,722.5 48.5,732.11495 48.5,744 V 1504 C 48.5,1515.8851 58.114946,1525.5 70,1525.5 H 1130 C 1141.8851,1525.5 1151.5,1515.8851 1151.5,1504 V 744 C 1151.5,732.11495 1141.8851,722.5 1130,722.5 H 795 V 725.5 H 1130 C 1140.2749,725.5 1148.5,733.72505 1148.5,744 V 1504 C 1148.5,1514.2749 1140.2749,1522.5 1130,1522.5 H 70 C 59.725054,1522.5 51.5,1514.2749 51.5,1504 V 744 C 51.5,733.72505 59.725054,725.5 70,725.5 H 405 V 722.5 Z"/>
+                    <path class="box" id="box-oxygen"
+                          d="M 70,552.5 C 58.114946,552.5 48.5,562.11495 48.5,574 V 664 C 48.5,675.88505 58.114946,685.5 70,685.5 H 430 C 441.88505,685.5 451.5,675.88505 451.5,664 V 574 C 451.5,562.11495 441.88505,552.5 430,552.5 H 334.21875 V 555.5 H 430 C 440.27495,555.5 448.5,563.72505 448.5,574 V 664 C 448.5,674.27495 440.27495,682.5 430,682.5 H 70 C 59.725054,682.5 51.5,674.27495 51.5,664 V 574 C 51.5,563.72505 59.725054,555.5 70,555.5 H 164 V 552.5 Z"/>
+                    <path class="box" id="box-liquid-cooling"
+                          d="M 489,552.5 C 477.11495,552.5 467.5,562.11495 467.5,574 V 664 C 467.5,675.88505 477.11495,685.5 489,685.5 H 1130 C 1141.8851,685.5 1151.5,675.88505 1151.5,664 V 574 C 1151.5,562.11495 1141.8851,552.5 1130,552.5 H 990 V 555.5 H 1130 C 1140.2749,555.5 1148.5,563.72505 1148.5,574 V 664 C 1148.5,674.27495 1140.2749,682.5 1130,682.5 H 489 C 478.72505,682.5 470.5,674.27495 470.5,664 V 574 C 470.5,563.72505 478.72505,555.5 489,555.5 H 625 V 552.5 Z"/>
+                </g>
+
+                <g id="box-labels">
+                    <text class="box-label" x="599" y="78" id="box-label-hydraulic">HYDRAULIC</text>
+                    <text class="box-label" x="601" y="348" id="box-label-apu">APU</text>
+                    <text class="box-label" x="600" y="739" id="box-label-status-messages">STATUS MESSAGES</text>
+                    <text class="box-label" x="250" y="569" id="box-label-oxygen">OXYGEN</text>
+                    <text class="box-label" x="809" y="567" id="box-label-liquid-cooling">LIQUID COOLING</text>
+                </g>
+
+                <g id="boxes-content">
+                    <text class="box-content-label" x="70" y="652" id="box-content-label-crew-press-oxygen">CREW PRESS
+                    </text>
+                    <text class="box-content-value" x="380" y="652" id="box-content-value-crew-press-oxygen">1950</text>
+                    <text class="box-content-label" x="160" y="186" id="box-content-label-qty-hydraulic">QTY</text>
+                    <text class="box-content-label" x="160" y="242" id="box-content-label-press-hydraulic">PRESS</text>
+                    <text class="box-content-value" x="422" y="242" id="box-content-value-l-press-hydraulic">5100</text>
+                    <text class="box-content-value" x="707" y="242" id="box-content-value-c-press-hydraulic">5100</text>
+                    <text class="box-content-value" x="983" y="242" id="box-content-value-r-press-hydraulic">5100</text>
+                    <text class="box-content-value" x="423" y="186" id="box-content-value-l-qty-hydraulic">1.25</text>
+                    <text class="box-content-value" x="705" y="186" id="box-content-value-c-qty-hydraulic">1.05</text>
+                    <text class="box-content-value" x="984" y="186" id="box-content-value-r-qty-hydraulic">1.14</text>
+                    <text class="box-content-label" x="421" y="135" id="box-content-label-l-hydraulic"
+                          text-anchor="middle">L
+                    </text>
+                    <text class="box-content-label" x="707" y="135" id="box-content-label-c-hydraulic"
+                          text-anchor="middle">C
+                    </text>
+                    <text class="box-content-label" x="983" y="135" id="box-content-label-r-hydraulic"
+                          text-anchor="middle">R
+                    </text>
+
+                    <text class="box-content-label" x="324" y="407.14285" id="box-content-label-rpm-apu">RPM</text>
+                    <text class="box-content-label" x="704" y="407.53348" id="box-content-label-egt-apu">EGT</text>
+                    <text class="box-content-label" x="100" y="473.92856" id="box-content-label-oil-press-apu">OIL PRESS
+                    </text>
+                    <text class="box-content-label" x="500" y="474.14212" id="box-content-label-oil-temp-apu">OIL TEMP
+                    </text>
+                    <text class="box-content-label" x="850" y="473.57144" id="box-content-label-oil-qty-apu">OIL QTY
+                    </text>
+                    <text class="box-content-value" x="450" y="407.53348" id="box-content-value-rpm-apu">100.1</text>
+                    <text class="box-content-value" x="820" y="407.53348" id="box-content-value-egt-apu">
+                        <tspan id="box-content-value-egt-apu-span">101</tspan>
+                        <tspan class="unit" dx="15">C</tspan>
+                    </text>
+                    <text class="box-content-value" x="375" y="474.28571" id="box-content-value-oil-press-apu">
+                        <tspan id="box-content-value-oil-press-apu-span">60</tspan>
+                        <tspan class="unit" dx="15">PSI</tspan>
+                    </text>
+                    <text class="box-content-value" x="730" y="474.28571" id="box-content-value-oil-temp-apu">
+                        <tspan id="box-content-value-oil-temp-apu-span">75</tspan>
+                        <tspan class="unit" dx="15">C</tspan>
+                    </text>
+                    <text class="box-content-value" x="1065" y="474.28571" id="box-content-value-oil-qty-apu">7.4</text>
+
+
+                    <text class="box-content-label" x="510" y="652" id="box-content-label-qty-liquid-cooling">QTY</text>
+                    <text class="box-content-label" x="674" y="610" id="box-content-label-l-liquid-cooling"
+                          text-anchor="middle">L
+                    </text>
+                    <text class="box-content-label" x="958" y="610" id="box-content-label-r-liquid-cooling"
+                          text-anchor="middle">R
+                    </text>
+                    <text class="box-content-value" x="958" y="652" id="box-content-value-l-liquid-cooling">0.98</text>
+                    <text class="box-content-value" x="674" y="652" id="box-content-value-r-liquid-cooling">1.01</text>
+                </g>
+
             </g>
 
             <g id="ELEC_Page">
@@ -460,7 +538,7 @@
             </g>
 
             <g id="DOOR_Page">
-                
+
                 <path id="fuseladge-mask" class="fuseladge-gray-mask"
                       d="M 490,360.125 C 490,360.125 492.39014,294.90114 508.63959,230.17157 525,165 550.68193,100.16138 597.48744,100.04784 644.3865,99.934068 669.22588,166.15713 687.53046,229.68935 698.12478,266.46054 706.22487,359.75152 706.22487,359.75152 L 706,613 886,715 883,700 C 883,700 880.39719,666.46217 883,650 885.02484,637.19332 889,624 895,613 895.6772,611.75847 968,613 968,613 972,613 980,642 980,645 980,646 980,702 980,702 L 971,728 H 962 V 736 L 954,753 1186,885 V 982 L 933,927 H 705 V 1325 L 690,1416 800,1509 H 674 595 521 396 L 505,1416 491,1325 490,927 H 264 L 10,982 V 885 L 242,753 234,736 V 728 H 225 L 216,701 C 216,701 216,649 216,646 216,640.90098 225,613 226.02773,613 227,613 298,613 300,613 302,613 313,646 313,648 313,650 313,700 313,700 L 308,716 490,612 Z"/>
                 <path id="fuseledge"
