--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -50,6 +50,10 @@
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CommonMFD.js"></script>
 
+<!-- Heavy files -->
+<script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
+<!-- Heavy files END -->
+
 <script type="text/html"
         import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CDU.html"></script>
 <script type="text/html"
