FCTL page added to SYS

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -704,11 +704,143 @@
 
                 <path id="gears-main-path"
                       d="m 944.9191,915 c 0,0 0,230 0,230 M 230.9192,915 c 0,0 0,230 0,230 M 569,312.7767 c 0,0 40,0 40,0 m 316,602 c 0,0 40,0 40,0 m -40,230.0003 c 0,0 40,0 40,0 m -755,0 c 0,0 40,0 40,0 M 210,914.7767 c 0,0 40,0 40,0 M 609,255.9175 V 370.9178 M 690.838,255.9175 V 370.9178 M 609,255.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.459,35.4362 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 609,369.6368 M 487,255.9175 v 115 m 81.8384,-115 v 115 M 487,255.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4365 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 487,369.6365 m 478,718.2805 v 115 m 81.838,-115 v 115 m -81.838,-115 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.459,35.437 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 965,1201.636 M 843,1087.917 v 115 m 81.8384,-115 v 115 M 843,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 843,1201.636 M 965,857.9175 v 115.0003 m 81.838,-115.0003 V 972.9178 M 965,857.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.459,35.4362 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 965,971.6368 M 843,857.9175 v 115 m 81.8384,-115 v 115 M 843,857.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4365 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 843,971.6365 M 251,1087.917 v 115 m 81.8384,-115 v 115 M 251,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 251,1201.636 M 129,1087.917 v 115 m 81.8384,-115 v 115 M 129,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 129,1201.636 M 251,857.9174 V 972.9177 M 332.8384,857.9174 V 972.9177 M 251,857.9174 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.4596,35.4363 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 251,971.6367 M 129,857.9174 v 115 m 81.8384,-115 v 115 M 129,857.9174 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4366 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 129,971.6364"/>
-
-
+                
             </g>
 
             <g id="FCTL_Page">
+
+                <g id="fuselage-mask">
+                    <path id="fuselage-gray-mask"
+                          d="M 510,15 H 694 V 216 L 892,305 C 892,305 881,239 900,215 H 974 C 996,245 994,288 977,325 975.37273,326.67226 970,325 970,325 L 968,337 1203,446 V 690 L 1166,684 1164,540 H 1092 V 673 L 918,647 V 540 H 844 V 640 H 694 V 910 L 692,967 C 692,967 835,1059 912,1109 933,1133 935,1100 940,1191 924.5,1188.5 848,1177 848,1177 V 1118 H 775 V 1167 C 775,1167 720,1159 684,1154 L 634,1155 612,1195 H 592 L 570,1155 520,1154 428,1167 V 1118 H 355 V 1178 L 264,1191 267,1137 C 272,1124 272,1125 283,1115 L 512,966 510,925 V 640 H 361 V 540 H 286 V 647 L 112,673 V 540 H 37 V 684 L 1,690 V 446 L 233,341 V 325 C 233,323 231,325 226,325 210,280 204,260 228,215 H 303 C 317,229 315,283 311,305 395,268 510,216 510,216 Z"/>
+                </g>
+                <g id="fuselage">
+                    <path id="fuselage-path"
+                          d="M 694,640 H 844 M 918,647 1092,673 M 1166,684 1204,689.75 M 268,325 225.59402,324.73483 C 196.6858,260.18159 228,215 228,215 H 303 C 324,250 311,306 311,306 M 233,341 V 325 M 1,446 510,216 M 694,15 V 890 925 C 694,955 692,966 692,966 692,966 750.84406,1002.6048 810.50458,1042.7766 908.17477,1108.5417 935.97924,1117.9721 936.82143,1138.0536 L 940.25,1191.0714 C 940.25,1191.0714 938.38007,1190.7933 932.06526,1189.8669 925.75045,1188.9404 865.77803,1180.0044 847.9985,1177.4108 M 774.98336,1167.0238 C 740.58921,1162.0224 741.8551,1162.1726 685.69642,1154.0227 679.00391,1153.0515 634,1155 634,1155 M 510,15 V 890 925 C 510,955 512,966 512,966 512,966 453.15594,1002.6048 393.49542,1042.7766 295.82523,1108.5417 268.02076,1117.9721 267.17857,1138.0536 L 263.75,1191.0714 C 263.75,1191.0714 265.61993,1190.7933 271.93474,1189.8669 278.24955,1188.9404 355,1178 355,1178 M 428,1167 C 428,1167 462.1449,1162.1726 518.30358,1154.0227 524.99609,1153.0515 570,1155 570,1155 M 935,325 977.40598,324.73483 C 1006.3142,260.18159 975,215 975,215 H 900 C 879,250 892,306 892,306 M 970,341 V 325 M 1203,446 694,216 M 616.9375,932.77637 C 616.9375,953.53882 605,1186.3701 601.84375,1186.3701 600,1186.3701 586.75,953.53882 586.75,932.77637 586.75,912.01392 593.5077,895.18262 601.84375,895.18262 610.1798,895.18262 616.9375,912.01392 616.9375,932.77637 Z M 510,640 H 360 M 286,647 112,673 M 38,684 -9.9952513e-6,689.75 M 590.6875,1195.1992 H 613 M 512,966 C 519.33349,1007.3342 526.66667,1048.6667 540.00028,1087.0005 553.33389,1125.3343 572.66687,1160.667 592,1196 M 692,966 C 684.56235,1007.3342 677.125,1048.6667 663.7393,1087.0005 650.35361,1125.3343 631.02063,1160.667 611.6875,1196"/>
+                </g>
+
+
+                <g id="positions">
+                    <g id="ranges">
+                        <path id="path912"
+                              d="M 66.861786,561 H 96.861786 M 66.861786,648.13257 H 96.861786 M 66.861786,735.26517 H 96.861786 M 81.861786,560 V 736"/>
+                        <path id="path912-3"
+                              d="M 320,561 H 350 M 320,648.13257 H 350 M 320,735.26517 H 350 M 335,560 V 736"/>
+                        <path id="path912-9"
+                              d="M 855,561 H 885 M 855,648.13257 H 885 M 855,735.26517 H 885 M 870,560 V 736"/>
+                        <path id="path912-30"
+                              d="M 1105,561 H 1135 M 1105,648.13257 H 1135 M 1105,735.26517 H 1135 M 1120,560 V 736"/>
+                        <path id="position-l-elev"
+                              d="M 381,1138 H 411 M 381,1210.5 H 411 M 396,1137 V 1284 M 381,1283 H 411"/>
+                        <path id="position-r-elev"
+                              d="M 792,1138 H 822 M 792,1210.5 H 822 M 807,1137 V 1284 M 792,1283 H 822"/>
+                        <path id="position-rudder"
+                              d="M 599.5,1293.5 V 1273.5 M 436,1303 V 1264 M 763,1303 V 1264 M 435,1283.5 H 764"/>
+                    </g>
+                    <g id="pointers">
+                        <path id="pointer-l-flprn" d="M 331.99999,648.13257 305.99999,659.81629 V 636.44886 Z"/>
+                        <path id="pointer-r-ail" d="M 1123,648.13257 1149,659.81629 V 636.44886 Z"/>
+                        <path id="pointer-r-flprn" d="M 874,648.13257 900,659.81629 V 636.44886 Z"/>
+                        <path id="pointer-l-ail" d="M 79,648.13257 53,659.81629 V 636.44886 Z"/>
+                        <path id="pointer-rudder" d="M 599.5,1287 587.8163,1313 H 611.1837 Z"/>
+                        <path id="pointer-l-elev" d="M 392,1210.5 366,1222.1837 V 1198.8163 Z"/>
+                        <path id="pointer-r-elev" d="M 811,1210.5 837,1222.1837 V 1198.8163 Z"/>
+                    </g>
+                </g>
+
+
+                <g id="spoilers">
+                    <rect id="rect1014" width="36" height="90" x="400" y="398"/>
+                    <rect id="rect1014-8" width="36" height="90" x="352" y="398"/>
+                    <rect id="rect1014-5" width="36" height="90" x="269" y="398"/>
+
+                    <rect id="rect1014-58" width="36" height="90" x="221" y="398"/>
+                    <rect id="rect1014-7" width="36" height="90" x="173" y="398"/>
+                    <rect id="rect1014-2" width="36" height="90" x="448" y="398"/>
+                    <rect id="rect1014-3" width="36" height="90" x="124" y="398"/>
+
+                    <rect id="rect1092" width="36" height="90" x="-804" y="398" transform="scale(-1,1)"/>
+
+                    <rect id="rect1096" width="36" height="90" x="-852" y="398" transform="scale(-1,1)"/>
+
+                    <rect id="rect1100" width="36" height="90" x="-935" y="398" transform="scale(-1,1)"/>
+                    <rect id="rect1104" width="36" height="90" x="-983" y="398" transform="scale(-1,1)"/>
+
+                    <rect id="rect1108" width="36" height="90" x="-1031" y="398" transform="scale(-1,1)"/>
+                    <rect id="rect1112" width="36" height="90" x="-756" y="398" transform="scale(-1,1)"/>
+                    <rect id="rect1116" width="36" height="90" x="-1080" y="398" transform="scale(-1,1)"/>
+
+
+                    <rect id="left-spoiler-1" width="32" height="0" x="450" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-2" width="32" height="0" x="402" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-3" width="32" height="0" x="354" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-4" width="32" height="0" x="271" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-5" width="32" height="0" x="223" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-6" width="32" height="0" x="175" y="486" class="spoiler-value"/>
+                    <rect id="left-spoiler-7" width="32" height="0" x="126" y="486" class="spoiler-value"/>
+                    <rect id="right-spoiler-2" width="32" height="0" x="-802" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-3" width="32" height="0" x="-850" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-4" width="32" height="0" x="-933" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-5" width="32" height="0" x="-981" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-6" width="32" height="0" x="-1029" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-1" width="32" height="0" x="-754" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                    <rect id="right-spoiler-7" width="32" height="0" x="-1078" y="486" class="spoiler-value"
+                          transform="scale(-1,1)"/>
+                </g>
+
+
+                <g id="Stab" transform="translate(-450, 0)">
+                    <!--<rect x="500px" width="250px" y="865px" height="195px" style="fill:cyan" />-->
+
+                    <text class="takeoff" x="580px" y="905px">0.00</text>
+                    <rect x="530px" y="915px" width="100px" height="40px"/>
+                    <text class="value" x="625px" y="948px">0.00</text>
+                    <text class="info" x="640px" y="880px">ND</text>
+                    <text class="info" x="640px" y="1010px">NU</text>
+                    <rect class="trimBand" x="695px" y="900px" width="16px" height="40px"/>
+                    <line class="bar" x1="690px" x2="690" y1="870px" y2="1000px"/>
+                    <path class="markers" d="M690,870 l-16,0 M690,1000 l-16,0"/>
+                    <path class="arrow" d="M685,936 l-25,-10 l0,20"/>
+                    <text class="vlabel" x="725px" y="870px">STAB</text>
+                </g>
+
+                <g id="Rudder" transform="translate(150, 0)">
+                    <!--<rect x="750px" width="250px" y="865px" height="195px" style="fill:purple" />-->
+
+                    <rect x="845px" y="893px" width="80px" height="40px"/>
+                    <text class="value" x="920px" y="926px">0.0</text>
+                    <text class="left" x="820px" y="926px">L</text>
+                    <text class="right" x="950px" y="926px">R</text>
+                    <line class="bar" x1="800px" x2="970" y1="975px" y2="975px"/>
+                    <path class="markers" d="M800,975 l0,-16 M885,975 l0,-16 M970,975 l0,-16"/>
+                    <path class="arrow" d="M885,970 l10,-25 l-20,0"/>
+                    <text class="label" x="885px" y="1020px">RUDDER TRIM</text>
+                </g>
+
+
+                <g
+                        inkscape:groupmode="layer"
+                        id="layer11"
+                >
+                    <text x="81" y="795" class="label" id="text1329">L AIL</text>
+                    <text x="335" y="795" class="label" id="text1329-2">L FLPRN</text>
+                    <text x="870" y="795" class="label" id="text1329-5">R FLPRN</text>
+                    <text x="1119" y="795" class="label" id="text1329-7">R AIL</text>
+                    <text x="599" y="1351" class="label" id="text1329-0">RUDDER</text>
+                    <text x="599" y="1445" class="label" id="text1329-70">FLT CTRL MODE</text>
+                    <text x="891" y="1291" class="label" id="text1329-74">R ELEV</text>
+                    <text x="302" y="1291" class="label" id="text1329-4">L ELEV</text>
+                    <text x="6012" y="496" class="label" id="text1329-40">SPOILERS</text>
+                </g>
+                <g id="boxes">
+                    <rect id="rect1406" width="237.99998" height="50.638905" x="480" y="1460.0087" ry="10"/>
+                    <text x="598.07031" y="1496.75" id="text1410" class="box-label">NORMAL</text>
+                </g>
 
             </g>
 
