added fmc pages from main

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -210,6 +210,9 @@
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/UpdateDelayer.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyInputChecks.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyInputUtils.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyDataStorage.js"></script>
 <!-- Heavy files END -->
 
 <script type="text/html"
