--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/SAI/B787_10_SAI.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/SAI/B787_10_SAI.html
@@ -1,7 +1,8 @@
 ﻿<script type="text/html" id="B787_10_SAI">
     <div id="Mainframe">
         <div id="Electricity" state="off">
-            <glasscockpit-highlight id="Highlight" style="position:absolute; width: 100%; height:100%;"></glasscockpit-highlight>
+            <glasscockpit-highlight id="Highlight"
+                                    style="position:absolute; width: 100%; height:100%;"></glasscockpit-highlight>
             <b787-10-sai-altimeter-indicator id="Altimeter"></b787-10-sai-altimeter-indicator>
             <b787-10-sai-airspeed-indicator id="Airspeed"></b787-10-sai-airspeed-indicator>
             <b787-10-sai-attitude-indicator id="Horizon" background="true"></b787-10-sai-attitude-indicator>
@@ -12,27 +13,50 @@
     </div>
 </script>
 
-<link rel="stylesheet" href="B787_10_SAI.css" />
+<link rel="stylesheet" href="B787_10_SAI.css"/>
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/highlight.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/highlight.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/FlightPlan.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/FlightPlanManager.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/FlightPlanManager.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Waypoint.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/NearestWaypoint.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Approach.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Runway.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<!-- WT files END -->
+
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/BaseAirliners.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/HSIndicator.js"></script>
+
+<!-- Heavy files -->
+<script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyDataStorage.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_Initializer.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_IRS.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_APUInfo.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_APU.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_Systems.js"></script>
+<!-- Heavy files END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/SAI/B787_10_SAI.js"></script>
