speed director fix

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -222,6 +222,7 @@
 
 <!-- Heavy files -->
 <script type="text/html" import-script="/B78XH/Autopilot/B78XHNavModeSelector.js"></script>
+<script type="text/html" import-script="/B78XH/Directors/SpeedDirector.js"></script>
 <script type="text/html"
         import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
