--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -182,6 +182,7 @@
             </svg>
         </div>
     </div>
+    <div id="Borders"></div>
 </script>
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
