--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -23,6 +23,8 @@
 <script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
 <script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
 <script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/AutopilotMath.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/HoldsDirector.js"></script>
 <!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
