--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -200,6 +200,8 @@
 <script type="text/html" import-script="/WTPages/Autopilot/LNavDirector.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/WT_BaseVnav.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/WT_VnavAutopilot.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/CJ4_FMC_PilotWaypoint.js"></script>
 <!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
