--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -234,6 +234,10 @@
 <script type="text/html" import-script="/Heavy/Utils/HeavyInputChecks.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyInputUtils.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyDataStorage.js"></script>
+<script type="text/html" import-script="/Heavy/Integrations/SimBrief/SimBrief.js"></script>
+<script type="text/html" import-script="/Heavy/Integrations/SimBrief/SimBriefApi.js"></script>
+<script type="text/html" import-script="/Heavy/Integrations/SimBrief/SimBriefCredentials.js"></script>
+<script type="text/html" import-script="/Heavy/Integrations/SimBrief/SimBriefOceanicWaypointConverter.js"></script>
 <!-- Heavy files END -->
 
 <script type="text/html"
@@ -254,6 +258,8 @@
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_MaintPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RoutePage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RouteRequestPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_DepArrPage.js"></script>
 <script type="text/html"
