--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -27,6 +27,12 @@
 <script type="text/html" import-script="/WTPages/Autopilot/HoldsDirector.js"></script>
 <!-- WT files END -->
 
+<!-- Heavy files -->
+<script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyDataStorage.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
+<!-- Heavy files END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
 <script type="text/html" import-template="/HPages/VCockpit/Instruments/Shared/Map/MapInstrument.html"></script>
@@ -51,10 +57,6 @@
 
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CommonMFD.js"></script>
-
-<!-- Heavy files -->
-<script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
-<!-- Heavy files END -->
 
 <script type="text/html"
         import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CDU.html"></script>
