--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -37,9 +37,9 @@
 
             <div id="Waypoint">
                 <svg>
-                    <text id="WP_Name" class="Large" x="75%" y="20%" alignment-baseline="baseline"></text>
-                    <text id="WP_Track_Value" class="Value" x="100%" y="20%" alignment-baseline="baseline">---&deg
-                    </text>
+                    <text id="WP_Name" class="Large" x="100%" y="20%" alignment-baseline="baseline"></text>
+                    <!-- TRACK is not shown IRL-->
+                    <!-- <text id="WP_Track_Value" class="Value" x="100%" y="20%" alignment-baseline="baseline">---&deg</text> -->
                     <text id="WP_Distance_Value" class="Value" x="92%" y="45%" alignment-baseline="baseline">-.-</text>
                     <text id="WP_Distance_Units" class="Units" x="100%" y="45%" alignment-baseline="baseline">NM</text>
                     <text id="WP_Time" class="Value" x="100%" y="70%" alignment-baseline="baseline">--:--</text>
