--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -118,6 +118,166 @@
 
             <g id="ELEC_Page">
 
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1200" height="1800" viewBox="0 100 640 950">
+                    <defs>
+                        <clipPath id="clip-SYS_-_ELEC">
+                            <rect width="640" height="950"/>
+                        </clipPath>
+                    </defs>
+                    <g id="SYS_-_ELEC" data-name="SYS - ELEC" clip-path="url(#clip-SYS_-_ELEC)">
+                        <rect width="640" height="950"/>
+                        <text id="APU_GEN" class="titles" data-name="APU GEN" transform="translate(313 142)"><tspan x="-35.706" y="0">APU GEN</tspan></text>
+                        <text id="FWD_EXT_PWR" data-name="FWD EXT PWR" transform="translate(135 205)" font-size="17" class="titles"><tspan x="-56.109" y="0">FWD EXT PWR</tspan></text>
+                        <text id="AFT_EXT_PWR" data-name="AFT EXT PWR" transform="translate(493 205)" font-size="17" class="titles"><tspan x="-56.109" y="0">AFT EXT PWR</tspan></text>
+                        <text id="LARGE_MOTOR_POWER_SYS" data-name="LARGE MOTOR
+POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x="-56.109" y="0">LARGE MOTOR</tspan><tspan x="-45.907" y="18">POWER SYS</tspan></text>
+                        <text id="R_START" data-name="R START" transform="translate(591 413)" fill="#00fe00" font-size="17" class="titles"><tspan x="-35.706" y="0">R START</tspan></text>
+                        <text id="AC_BUSES" data-name="AC BUSES" transform="translate(315 449)" font-size="17" class="titles"><tspan x="-40.807" y="0">AC BUSES</tspan></text>
+                        <text id="GEN" transform="translate(125 559)" font-size="17" class="titles"><tspan x="-15.302" y="0">GEN</tspan></text>
+                        <text id="GEN-2" data-name="GEN" transform="translate(502 559)" font-size="17" class="titles"><tspan x="-15.302" y="0">GEN</tspan></text>
+                        <text id="CTRL" transform="translate(125 580)" font-size="17" class="titles"><tspan x="-20.403" y="0">CTRL</tspan></text>
+                        <text id="CTRL-2" data-name="CTRL" transform="translate(502 580)" font-size="17" class="titles"><tspan x="-20.403" y="0">CTRL</tspan></text>
+                        <text id="L1-GEN-L2" transform="translate(125 725)" font-size="17" class="titles"><tspan x="-45.916" y="0">L1-GEN-L2</tspan></text>
+                        <text id="R1-GEN-R2" transform="translate(502 725)" font-size="17" class="titles"><tspan x="-45.916" y="0">R1-GEN-R2</tspan></text>
+                        <text id="DRIVE" transform="translate(125 746)" font-size="17" class="titles"><tspan x="-25.504" y="0">DRIVE</tspan></text>
+                        <text id="MAIN_BAT" data-name="MAIN BAT" transform="translate(120 855)" font-size="17" class="titles"><tspan x="-40.807" y="0">MAIN BAT</tspan></text>
+                        <text id="APU_BAT" data-name="APU BAT" transform="translate(512 855)" font-size="17" class="titles"><tspan x="-35.706" y="0">APU BAT</tspan></text>
+                        <text id="VOLTS" transform="translate(463 886)" font-size="17" class="titles"><tspan x="-25.504" y="0">VOLTS</tspan></text>
+                        <text id="VOLTS-2" data-name="VOLTS" transform="translate(64 886)" font-size="17" class="titles"><tspan x="-25.504" y="0">VOLTS</tspan></text>
+                        <text id="AMPS" transform="translate(457 909)" font-size="17" class="titles"><tspan x="-20.403" y="0">AMPS</tspan></text>
+                        <text id="AMPS-2" data-name="AMPS" transform="translate(58 909)" font-size="17" class="titles"><tspan x="-20.403" y="0">AMPS</tspan></text>
+                        <text id="_31" data-name="31" transform="translate(517 886)" fill="#fff" font-size="17" class="titles"><tspan x="-10.202" y="0">31</tspan></text>
+                        <text id="_31-2" data-name="31" transform="translate(118 886)" fill="#fff" font-size="17" class="titles"><tspan x="-10.202" y="0">31</tspan></text>
+                        <text id="_13" data-name="13" transform="translate(517 909)" fill="#fff" font-size="17" class="titles"><tspan x="-10.202" y="0">13</tspan></text>
+                        <text id="_13-2" data-name="13" transform="translate(118 909)" fill="#fff" font-size="17" class="titles"><tspan x="-10.202" y="0">13</tspan></text>
+                        <text id="CHG" transform="translate(551 909)" fill="#fff" font-size="17" class="titles"><tspan x="-15.302" y="0">CHG</tspan></text>
+                        <text id="CHG-2" data-name="CHG" transform="translate(152 909)" fill="#fff" font-size="17" class="titles"><tspan x="-15.302" y="0">CHG</tspan></text>
+                        <text id="DRIVE-2" data-name="DRIVE" transform="translate(502 746)" font-size="17" class="titles"><tspan x="-25.504" y="0">DRIVE</tspan></text>
+                        <text id="L1" transform="translate(78 580)" font-size="17" class="titles"><tspan x="-10.202" y="0">L1</tspan></text>
+                        <text id="R1" transform="translate(453 580)" font-size="17" class="titles"><tspan x="-10.202" y="0">R1</tspan></text>
+                        <text id="L2" transform="translate(177 580)" font-size="17" class="titles"><tspan x="-10.202" y="0">L2</tspan></text>
+                        <text id="R2" transform="translate(552 580)" font-size="17" class="titles"><tspan x="-10.202" y="0">R2</tspan></text>
+                        <text id="L1_MAIN" data-name="L1 MAIN" transform="translate(176 482)" fill="#06dd07" font-size="17" class="titles"><tspan x="-35.706" y="0">L1 MAIN</tspan></text>
+                        <text id="L2_MAIN" data-name="L2 MAIN" transform="translate(269 481.74)" fill="#06dd07" font-size="17" class="titles"><tspan x="-35.706" y="0">L2 MAIN</tspan></text>
+                        <text id="R1_MAIN" data-name="R1 MAIN" transform="translate(362 481.74)" fill="#06dd07" font-size="17" class="titles"><tspan x="-35.706" y="0">R1 MAIN</tspan></text>
+                        <text id="R2_MAIN" data-name="R2 MAIN" transform="translate(455 481.74)" fill="#06dd07" font-size="17" class="titles"><tspan x="-35.706" y="0">R2 MAIN</tspan></text>
+                        <text id="L" transform="translate(285 165)" font-size="17" class="titles"><tspan x="-5.101" y="0">L</tspan></text>
+                        <text id="L-2" data-name="L" transform="translate(108 226)" font-size="17" class="titles"><tspan x="-5.101" y="0">L</tspan></text>
+                        <text id="R" transform="translate(339 165)" font-size="17" class="titles"><tspan x="-5.101" y="0">R</tspan></text>
+                        <text id="R-2" data-name="R" transform="translate(161 226)" font-size="17" class="titles"><tspan x="-5.101" y="0">R</tspan></text>
+                        <g id="Rectangle_108" data-name="Rectangle 108" transform="translate(86 233)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="45" height="56" rx="5" stroke="none"/>
+                            <rect x="1" y="1" width="43" height="54" rx="4" fill="none"/>
+                        </g>
+                        <g id="Rectangle_109" data-name="Rectangle 109" transform="translate(139 233)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="45" height="56" rx="5" stroke="none"/>
+                            <rect x="1" y="1" width="43" height="54" rx="4" fill="none"/>
+                        </g>
+                        <g id="Rectangle_121" data-name="Rectangle 121" transform="translate(448 588)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="46" height="56" stroke="none"/>
+                            <rect x="1" y="1" width="44" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_124" data-name="Rectangle 124" transform="translate(511 588)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="46" height="56" stroke="none"/>
+                            <rect x="1" y="1" width="44" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_122" data-name="Rectangle 122" transform="translate(443 650)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="54" height="55" stroke="none"/>
+                            <rect x="1" y="1" width="52" height="53" fill="none"/>
+                        </g>
+                        <g id="Rectangle_125" data-name="Rectangle 125" transform="translate(506 650)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="54" height="55" stroke="none"/>
+                            <rect x="1" y="1" width="52" height="53" fill="none"/>
+                        </g>
+                        <g id="Rectangle_110" data-name="Rectangle 110" transform="translate(470.5 233)" fill="none" stroke="#b7b7b7" stroke-width="2">
+                            <rect width="45" height="56" rx="5" stroke="none"/>
+                            <rect x="1" y="1" width="43" height="54" rx="4" fill="none"/>
+                        </g>
+                        <g id="Rectangle_111" data-name="Rectangle 111" transform="translate(428.5 331.678)" fill="none" stroke="#06d0d1" stroke-width="2">
+                            <rect width="130" height="52" rx="16" stroke="none"/>
+                            <rect x="1" y="1" width="128" height="50" rx="15" fill="none"/>
+                        </g>
+                        <g id="Rectangle_113" data-name="Rectangle 113" transform="translate(133.5 457.678)" fill="none" stroke="#00fe00" stroke-width="2">
+                            <rect width="86" height="35" rx="16" stroke="none"/>
+                            <rect x="1" y="1" width="84" height="33" rx="15" fill="none"/>
+                        </g>
+                        <g id="Rectangle_114" data-name="Rectangle 114" transform="translate(226.5 457.417)" fill="none" stroke="#00fe00" stroke-width="2">
+                            <rect width="86" height="35" rx="16" stroke="none"/>
+                            <rect x="1" y="1" width="84" height="33" rx="15" fill="none"/>
+                        </g>
+                        <g id="Rectangle_115" data-name="Rectangle 115" transform="translate(319.5 457.417)" fill="none" stroke="#00fe00" stroke-width="2">
+                            <rect width="86" height="35" rx="16" stroke="none"/>
+                            <rect x="1" y="1" width="84" height="33" rx="15" fill="none"/>
+                        </g>
+                        <g id="Rectangle_116" data-name="Rectangle 116" transform="translate(412.5 457.417)" fill="none" stroke="#00fe00" stroke-width="2">
+                            <rect width="86" height="35" rx="16" stroke="none"/>
+                            <rect x="1" y="1" width="84" height="33" rx="15" fill="none"/>
+                        </g>
+                        <g id="Rectangle_112" data-name="Rectangle 112" transform="translate(75.5 424.917)" fill="none" stroke="#06d0d1" stroke-width="2">
+                            <rect width="477" height="100" rx="23" stroke="none"/>
+                            <rect x="1" y="1" width="475" height="98" rx="22" fill="none"/>
+                        </g>
+                        <g id="Rectangle_117" data-name="Rectangle 117" transform="translate(226.5 734.917)" fill="none" stroke="#06d0d1" stroke-width="2">
+                            <rect width="176" height="189" rx="23" stroke="none"/>
+                            <rect x="1" y="1" width="174" height="187" rx="22" fill="none"/>
+                        </g>
+                        <path id="Path_106" data-name="Path 106" d="M2144.5,2435.132v136.786" transform="translate(-2036 -2147)" fill="none" stroke="#b6b6b6" stroke-width="3"/>
+                        <path id="Path_107" data-name="Path 107" d="M2144.5,2435.132v136.786" transform="translate(-1982 -2147)" fill="none" stroke="#b6b6b6" stroke-width="3"/>
+                        <path id="Path_111" data-name="Path 111" d="M2144.5,2435.132v63.641" transform="translate(-1674 -1910.214)" fill="none" stroke="#b6b6b6" stroke-width="3"/>
+                        <path id="Path_112" data-name="Path 112" d="M2144.5,2435.132v63.641" transform="translate(-1611 -1910.214)" fill="none" stroke="#b6b6b6" stroke-width="3"/>
+                        <path id="Path_108" data-name="Path 108" d="M2144.5,2435.132v43.546" transform="translate(-1650.5 -2147)" fill="none" stroke="#b6b6b6" stroke-width="3"/>
+                        <rect id="Rectangle_118" data-name="Rectangle 118" width="107" height="15" transform="translate(261 728)"/>
+                        <text id="LOAD_SHED" data-name="LOAD SHED" transform="translate(315 742)" font-size="17" class="titles"><tspan x="-45.907" y="0">LOAD SHED</tspan></text>
+                        <g id="Rectangle_119" data-name="Rectangle 119" transform="translate(262 168)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="50" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="44" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_126" data-name="Rectangle 126" transform="translate(70 585)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="50" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="44" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_128" data-name="Rectangle 128" transform="translate(134 585.25)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="50" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="44" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_127" data-name="Rectangle 127" transform="translate(66 647)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="59" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="53" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_129" data-name="Rectangle 129" transform="translate(130 647.25)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="59" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="53" height="54" fill="none"/>
+                        </g>
+                        <g id="Rectangle_120" data-name="Rectangle 120" transform="translate(316 168)" fill="none" stroke="#02f201" stroke-width="6">
+                            <rect width="50" height="60" stroke="none"/>
+                            <rect x="3" y="3" width="44" height="54" fill="none"/>
+                        </g>
+                        <line id="Line_11" data-name="Line 11" y1="233" transform="translate(287 172.5)" fill="none" stroke="#00fe00" stroke-width="8"/>
+                        <line id="Line_13" data-name="Line 13" y2="106.917" transform="translate(94.863 535.5)" fill="none" stroke="#00fe00" stroke-width="8"/>
+                        <line id="Line_14" data-name="Line 14" y2="106.917" transform="translate(158.863 535.75)" fill="none" stroke="#00fe00" stroke-width="8"/>
+                        <line id="Line_12" data-name="Line 12" y1="233" transform="translate(341 172.5)" fill="none" stroke="#00fe00" stroke-width="8"/>
+                        <path id="Path_109" data-name="Path 109" d="M0,233V198.245" transform="translate(494 622.917) rotate(180)" fill="none" stroke="#00fe00" stroke-width="8"/>
+                        <path id="Polygon_3" data-name="Polygon 3" d="M10,0,20,25H0Z" transform="translate(297 427) rotate(180)" fill="#00fe00"/>
+                        <path id="Polygon_9" data-name="Polygon 9" d="M10,0,20,13H0Z" transform="translate(85.5 522.5)" fill="#00fe00"/>
+                        <path id="Polygon_10" data-name="Polygon 10" d="M10,0,20,13H0Z" transform="translate(149.5 522.75)" fill="#00fe00"/>
+                        <path id="Polygon_4" data-name="Polygon 4" d="M10,0,20,25H0Z" transform="translate(351 427) rotate(180)" fill="#00fe00"/>
+                        <path id="Polygon_5" data-name="Polygon 5" d="M10,0,20,11H0Z" transform="translate(484 382.417)" fill="#00fe00"/>
+                        <path id="Polygon_6" data-name="Polygon 6" d="M16,0,32,18H0Z" transform="translate(606 398.917) rotate(180)" fill="#00fe00"/>
+                        <path id="Path_110" data-name="Path 110" d="M2594.5,2504.678h31.279v23.854" transform="translate(-2036 -2147)" fill="none" stroke="#00fe00" stroke-linejoin="round" stroke-width="8"/>
+                        <g id="Ellipse_4" data-name="Ellipse 4" transform="translate(451 597)" fill="none" stroke="#00fc00" stroke-width="3">
+                            <circle cx="18" cy="18" r="18" stroke="none"/>
+                            <circle cx="18" cy="18" r="16.5" fill="none"/>
+                        </g>
+                        <g id="Ellipse_5" data-name="Ellipse 5" transform="translate(514 597)" fill="none" stroke="#00fc00" stroke-width="3">
+                            <circle cx="18" cy="18" r="18" stroke="none"/>
+                            <circle cx="18" cy="18" r="16.5" fill="none"/>
+                        </g>
+                        <rect id="Rectangle_123" data-name="Rectangle 123" width="16" height="17" transform="translate(470 618)"/>
+                        <rect id="Rectangle_130" data-name="Rectangle 130" width="16" height="17" transform="translate(535 618)"/>
+                        <path id="Polygon_7" data-name="Polygon 7" d="M5.8,0l5.8,11.681H0Z" transform="matrix(-0.883, -0.469, 0.469, -0.883, 484.379, 629.76)" fill="#00fe00"/>
+                        <path id="Polygon_8" data-name="Polygon 8" d="M5.8,0l5.8,11.681H0Z" transform="matrix(-0.883, -0.469, 0.469, -0.883, 547.379, 629.76)" fill="#00fe00"/>
+                    </g>
+                </svg>
             </g>
 
             <g id="HYD_Page">
