--- a/html_ui/Pages/VCockpit/Core/VCockpit.html
+++ b/html_ui/Pages/VCockpit/Core/VCockpit.html
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="/JS/coherent.js"></script>
     <script type="text/javascript" src="/JS/common.js"></script>
+    <script type="text/javascript" src="/JS/debug.js"></script>
     <script type="text/javascript" src="/JS/Types.js"></script>
     <script type="text/javascript" src="/JS/simvar.js"></script>
     <script type="text/javascript" src="/JS/avionics.js"></script>
